# newton-basins-py

./: .gitignore  app.py  pyproject.toml
application/: basins_drawer_service.py  constants.py  equation_solver.py  image_tile.py
application/utils/: pandas_helper.py
common/: utils.py
domain/: image_tile.py  math_equation.py  root_color.py
gui/: control_unit.py  space.py  ui_tile.py
pocs/: async_pool.ipynb  basins.ipynb  color_tests.ipynb
